added a basic bat enemy to test movement

--- a/The-Misadventures-Of-Hazardous-Lazarus/The-Misadventures-Of-Hazardous-Lazarus.vcxproj
+++ b/The-Misadventures-Of-Hazardous-Lazarus/The-Misadventures-Of-Hazardous-Lazarus.vcxproj
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Bat.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -151,6 +152,7 @@
     <ClCompile Include="Sprite.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bat.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Pickup.h" />
@@ -158,6 +160,7 @@
     <ClInclude Include="Sprite.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="Sprites\Bat.png" />
     <Image Include="Sprites\Ground.png" />
     <Image Include="Sprites\Lazarus Side.png" />
   </ItemGroup>
