added Echo functionality

--- a/The-Misadventures-Of-Hazardous-Lazarus/The-Misadventures-Of-Hazardous-Lazarus.vcxproj
+++ b/The-Misadventures-Of-Hazardous-Lazarus/The-Misadventures-Of-Hazardous-Lazarus.vcxproj
@@ -161,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="Sprites\Bat.png" />
+    <Image Include="Sprites\Echo.png" />
     <Image Include="Sprites\Ground.png" />
     <Image Include="Sprites\Lazarus Side.png" />
   </ItemGroup>
