--- a/The-Misadventures-Of-Hazardous-Lazarus/The-Misadventures-Of-Hazardous-Lazarus.vcxproj.filters
+++ b/The-Misadventures-Of-Hazardous-Lazarus/The-Misadventures-Of-Hazardous-Lazarus.vcxproj.filters
@@ -67,5 +67,8 @@
     <Image Include="Sprites\Bat.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Sprites\Echo.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
