added background and player direction flip

--- a/The-Misadventures-Of-Hazardous-Lazarus/The-Misadventures-Of-Hazardous-Lazarus.vcxproj
+++ b/The-Misadventures-Of-Hazardous-Lazarus/The-Misadventures-Of-Hazardous-Lazarus.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="Sprite.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="Sprites\background.png" />
     <Image Include="Sprites\Bat.png" />
     <Image Include="Sprites\Echo.png" />
     <Image Include="Sprites\Ground.png" />
